# Metafusion

./: .gitignore  BenchNTT.csv  CHANGELOG.md  LazyModuloInsertion.hs  Metafusion.cabal  Metafusion.hs  PrimRoots.hs  ShortestPath.hs  Zoo.hs  count.csv  count.html  shortest.html
c/: newHopeNTT0.c  newHopeNTT1024.c  newHopeNTT20.c  newHopeNTT400.c  newHopeNTT512.c  newHopeNTTHandmade.c
test/: NewHope.hs  NewHopeAggressive.hs  NewHopeHandmade.hs  ShortestPathBench.hs  ShortestPathBenchC.hs
workspace/: .gitignore  Makefile  bit_reverse.c  newHopeNTT.c  newHopeNTTMasuda.c  nttTest.c  printf_insert.pl
