cabal-version:      3.0
name:               Metafusion
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             Zhangfan Li
maintainer:         zhangfan.li@acm.org
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -O2 -ddump-simpl -dsuppress-all -ddump-to-file

library
    import:           warnings
    -- cpp-options: -DTRACE
    exposed-modules:
        Zoo,
        LazyModuloInsertion,
        ShortestPath
    other-modules:
        PrimRoots
    build-depends:
        base  >=4.17 && <4.21,
        array ^>=0.5.4.0,
        mtl   ^>=2.3.2,
        unordered-containers ^>=0.2.20,
        hashable ^>=1.4,
        template-haskell >=2.19 && <2.24,
        matrix ^>=0.3.6,
        vector ^>=0.13.0,
        text ^>=2.1.0
    hs-source-dirs:   .
    default-language: GHC2021

test-suite Metafusion-NewHope
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          NewHope.hs
    build-depends:
        base >=4.17 && <4.21,
        Metafusion,
        criterion ^>=1.6.0.0

test-suite Metafusion-NewHopeHandmade
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          NewHopeHandmade.hs
    build-depends:
        base >=4.17 && <4.21,
        Metafusion

test-suite Metafusion-NewHopeAggressive
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          NewHopeAggressive.hs
    build-depends:
        base >=4.17 && <4.21,
        mtl ^>=2.3.2,
        Metafusion

test-suite Metafusion-ShortestPathBench
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          ShortestPathBench.hs
    build-depends:
        base >=4.17 && <4.21,
        Metafusion,
        criterion ^>=1.6.0.0,
        template-haskell >=2.19 && <2.24,
        matrix ^>=0.3.6,
        vector ^>=0.13.0,
        matrix-market-attoparsec ^>=0.1.1,
        unordered-containers ^>=0.2.20

test-suite Metafusion-ShortestPathBenchC
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          ShortestPathBenchC.hs
    build-depends:
        base >=4.17 && <4.21,
        Metafusion,
        criterion ^>=1.6.0.0,
        template-haskell >=2.19 && <2.24,
        matrix ^>=0.3.6,
        vector ^>=0.13.0,
        matrix-market-attoparsec ^>=0.1.1,
        unordered-containers ^>=0.2.20
